Endpoints-pph-ui-service-test.yml
---
kind: "Endpoints"
apiVersion: "v1"
metadata:
  annotations:
    endpoints.kubernetes.io/last-change-trigger-time: "2023-09-11T19:21:59Z"
  uid: "9946e2c2-bf60-44a4-a75b-1fb2ef007a5e"
  name: "pph-ui-service-test"
  labels:
    environment: "test"
    nibr-app-name: "pph-ui"
    app.kubernetes.io/name: "pph-ui-test"
    app.kubernetes.io/instance: "pph-ui-test"
subsets:
- addresses:
  - ip: "10.244.2.75"
    nodeName: "nrusca-slp4117"
    targetRef:
      kind: "Pod"
      name: "pph-ui-deploy-test-58db77867d-v4t8f"
      namespace: "pph-nonprod"
      resourceVersion: "503481216"
      uid: "af9c3e11-36ee-4c89-b552-9153375d2a03"
  - ip: "10.244.8.74"
    nodeName: "nrusca-slp4165"
    targetRef:
      kind: "Pod"
      name: "pph-ui-deploy-test-58db77867d-6gm5v"
      namespace: "pph-nonprod"
      resourceVersion: "503480821"
      uid: "e5f2ca9f-a17b-4c8a-b83d-0fad1a318345"
  ports:
  - name: "pph-ui-port"
    port: 8080
    protocol: "TCP"
