Ingress-pph-ui-ingress-test.yml
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  annotations:
    gitopsurl: "https://bitbucket.prd.nibr.novartis.net/projects/DENG/repos/pph_ui-zephyr-deploy/browse"
    ingress.kubernetes.io/timeout-server: "300s"
  uid: "fd6daf84-a6be-49b8-849a-19179f1f2ea5"
  name: "pph-ui-ingress-test"
  labels:
    environment: "test"
    nibr-app-name: "pph-ui"
    app.kubernetes.io/name: "pph-ui-test"
    app.kubernetes.io/instance: "pph-ui-test"
spec:
  rules:
  - host: "pph.tst.nibr.novartis.net"
    http:
      paths:
      - path: "/"
        pathType: "ImplementationSpecific"
        backend:
          serviceName: "pph-ui-service-test"
          servicePort: "pph-ui-port"
          service:
            name: "pph-ui-service-test"
            port:
              name: "pph-ui-port"
  - host: "prime-stage.nibr.novartis.net"
    http:
      paths:
      - path: "/"
        pathType: "ImplementationSpecific"
        backend:
          serviceName: "pph-ui-service-test"
          servicePort: "pph-ui-port"
          service:
            name: "pph-ui-service-test"
            port:
              name: "pph-ui-port"
  tls:
  - hosts:
    - "pph.tst.nibr.novartis.net"
    - "prime-stage.nibr.novartis.net"
    secretName: "pph-tls-test"
status:
  loadBalancer:
    ingress:
    - {}
